# FVM

./: AGENTS.md  README.md  discrimination_cases_d_e_a_v0_7_0.md  pyproject.toml
.github/: v012-mesh-cfl-docs-trigger.txt  v012d-finite-opening-fix.patch  v013-reference-core-post-merge-sync-trigger.txt
docs/: backend_traceability_status.md  case_c_coolprop_mini_run_spec.md  coolprop_safe_representative_states.md  coolprop_small_amplitude_wave_verification_spec.md
scripts/: v013b_apply_metric_fix.py
src/: sitecustomize.py
tests/: conftest.py  test_boundary_reflection_flux_plotting.py  test_boundary_reflection_helpers.py  test_boundary_reflection_plotting.py  test_boundary_reflection_regression.py  test_boundary_reflection_sweep.py  test_boundary_reflection_verification_report.py  test_case_c_coolprop_mini_run.py  test_case_c_trial_evaluation.py  test_controlled_pressure_ramp_analysis.py  test_controlled_pressure_ramp_front_fit.py  test_controlled_pressure_ramp_plotting.py  test_controlled_pressure_ramp_regression.py  test_controlled_pressure_ramp_sweep.py  test_controlled_pressure_ramp_sweep_traceability.py  test_controlled_pressure_ramp_verification_report.py  test_coolprop_backend_installed.py  test_coolprop_boundary_reflection.py  test_coolprop_controlled_pressure_ramp.py  test_coolprop_internal_valve_closing_ramp.py  test_coolprop_internal_valve_closing_ramp_plots.py  test_coolprop_internal_valve_driven.py  test_coolprop_internal_valve_driven_plots.py  test_coolprop_internal_valve_opening_ramp.py  test_coolprop_internal_valve_opening_ramp_plots.py  (+43 more)
(+261 files in other folders)
