[project]
name = "liquid-gas-transient"
version = "0.5.2"
description = "Conservative finite-volume transient solver skeleton for liquefied gas pipeline analysis."
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
coolprop = ["CoolProp>=6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "coolprop_installed: tests requiring the optional CoolProp package",
    "numerical_regression: lightweight numerical regression tests that run solver paths",
]
